# car-detector-computer-vision

./: .gitignore  main.py  pyproject.toml
app/controllers/: infer_with_image_controller.py  infer_with_video_controller.py  infer_with_video_controller_tracker.py  yolo_model_controller.py
app/core/: agent.py  state.py
app/models/: Crop.py  DetectResponse.py
app/routers/: inference.py
app/utils/: metadata_processing.py  video_processing.py
